--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-  <h1>My name is Amanda</h1>
+  <h1>Hi, I'm Amanda.</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
